--- a/templates/default/wp-config.php.erb
+++ b/templates/default/wp-config.php.erb
@@ -46,11 +46,12 @@ define('AUTH_KEY',         '<%= @auth_key %>');
 define('SECURE_AUTH_KEY',  '<%= @secure_auth_key %>');
 define('LOGGED_IN_KEY',    '<%= @logged_in_key %>');
 define('NONCE_KEY',        '<%= @nonce_key %>');
+<% if @use_salt %>
 define('AUTH_SALT',        '<%= @auth_salt %>');
 define('SECURE_AUTH_SALT', '<%= @secure_auth_salt %>');
 define('LOGGED_IN_SALT',   '<%= @logged_in_salt %>');
 define('NONCE_SALT',       '<%= @nonce_salt %>');
-
+<% end %>
 /**#@-*/
 
 /**
@@ -70,15 +71,6 @@ $table_prefix  = '<%= @db_prefix %>';
  * language support.
  */
 define('WPLANG', '<%= @lang %>');
-
-/**
- * For developers: WordPress debugging mode.
- *
- * Change this to true to enable the display of notices during development.
- * It is strongly recommended that plugin and theme developers use WP_DEBUG
- * in their development environments.
- */
-define('WP_DEBUG', false);
 
 <% if @allow_multisite %>
 /* Multisite */
